# tradingagent

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: COLAB_GUIDE.md
notebooks/: download_colab.ipynb  forward_test_2026.ipynb  rl_debug_colab.ipynb  screener_notebook.ipynb  train_colab.ipynb
screener/: __init__.py  backtester.py  config.py  data_pipeline.py  download_ohlcv.py  factor_timing_model.py  kronos_screener.py  news_scorer.py  paper_trader.py  portfolio_env.py  replay_trader.py  rl_trader.py  technical_ranker.py  utils.py
screener/kronos/: __init__.py  kronos.py
