[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagent"
version = "0.1.0"
description = "A-share stock screening and RL trading agent"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
rl = [
    "gymnasium>=0.29",
    "stable-baselines3>=2.2",
    "sb3-contrib>=2.2",
]
kronos = [
    "torch>=2.0",
    "einops>=0.7",
    "huggingface_hub>=0.20",
    "tqdm>=4.60",
]
news = [
    "transformers>=4.38",
    "akshare>=1.12",
]
colab = [
    "baostock>=0.8",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.3",
]
all = [
    "tradingagent[rl,kronos,news,colab,dev]",
]

[tool.setuptools.packages.find]
include = ["screener*"]
